crates/engine/tests/integration/snapshots/integration__oracle_parser__snapshot_lightning_bolt.snap
---
source: crates/engine/tests/oracle_parser.rs
expression: result
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "DealDamage",
        "amount": {
          "type": "Fixed",
          "value": 3
        },
        "target": {
          "type": "Any"
        }
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Lightning Bolt deals 3 damage to any target.",
      "target_prompt": null,
      "sorcery_speed": false,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
